Introduce a call devirtualization transform

--- a/Flame.Compiler/Flame.Compiler.csproj
+++ b/Flame.Compiler/Flame.Compiler.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Transforms\AllocaToRegister.cs" />
     <Compile Include="Transforms\BlockFusion.cs" />
     <Compile Include="Transforms\BoxToAlloca.cs" />
+    <Compile Include="Transforms\CallDevirtualization.cs" />
     <Compile Include="Transforms\ConstantPropagation.cs" />
     <Compile Include="Transforms\CopyPropagation.cs" />
     <Compile Include="Transforms\DeadBlockElimination.cs" />
