--- a/Flame.Clr/Flame.Clr.csproj
+++ b/Flame.Clr/Flame.Clr.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transforms\CanonicalizeDelegates.cs" />
     <Compile Include="Transforms\ExpandLinq.cs" />
+    <Compile Include="Transforms\LowerBox.cs" />
     <Compile Include="Transforms\LowerDelegates.cs" />
   </ItemGroup>
   <ItemGroup>
