Introduce an exception specification attribute

--- a/Flame/Flame.csproj
+++ b/Flame/Flame.csproj
@@ -98,6 +98,7 @@
     <Compile Include="TypeSystem\DescribedMethod.cs" />
     <Compile Include="TypeSystem\DescribedType.cs" />
     <Compile Include="TypeSystem\ErrorType.cs" />
+    <Compile Include="TypeSystem\ExceptionSpecificationAttribute.cs" />
     <Compile Include="TypeSystem\FlagAttribute.cs" />
     <Compile Include="TypeSystem\IndirectAccessorSpecialization.cs" />
     <Compile Include="TypeSystem\IndirectFieldSpecialization.cs" />
